banner section done

--- a/index.html
+++ b/index.html
@@ -32,9 +32,24 @@
         </div>
         <!-- navbar ends here -->
 
-        <!-- banner section starts -->
         <main class="main-content">
-
+        <!-- banner section starts -->
+            <div class="banner-main">
+                <div class="banner-childs">
+                    <img src="./resources/electric-image.jpg" alt="">
+                    <div class="fifty-off">
+                        50% Off
+                    </div>
+                </div>
+                <div class="banner-childs">
+                    <h1>PURCHASE ANY QUANTITY</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem esse perferendis explicabo cum debitis neque commodi saepe itaque optio sit.</p>
+                    <div>
+                        <button class="banner-btn">ORDER NOW</button>
+                        <button class="banner-btn">SHOP LIST</button>
+                    </div>
+                </div>
+            </div>
         </main>
 
 
