--- a/index.html
+++ b/index.html
@@ -51,9 +51,189 @@
                 </div>
             </div>
         </main>
-
-
     </header>
+    <main class="main-content">
+        <!-- popular section starts here -->
+         <div class="popular-main">
+            <div class="card">
+                <div>
+                    <img src="./resources/images/latest-camera.jpg" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="./resources/images/action.png" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="./resources/images/airpod.png" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="./resources/images/camera.png" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="./resources/images/drone.png" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+            <div class="card">
+                <div>
+                    <img src="./resources/images/latest-camera.jpg" alt="">
+                </div>
+
+                <div>
+                    <h1>Camera</h1>
+                    <h2>$980.25</h2>
+                </div>
+
+                <div>
+                    <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </span>
+                     4.99
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+
+                </p>
+            </div>
+
+         </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
