--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- navbar ends here -->
 
         <main class="main-content">
-        <!-- banner section starts -->
+            <!-- banner section starts -->
             <div class="banner-main">
                 <div class="banner-childs">
                     <img src="./resources/electric-image.jpg" alt="">
@@ -43,7 +43,8 @@
                 </div>
                 <div class="banner-childs">
                     <h1>PURCHASE ANY QUANTITY</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem esse perferendis explicabo cum debitis neque commodi saepe itaque optio sit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem esse perferendis
+                        explicabo cum debitis neque commodi saepe itaque optio sit.</p>
                     <div>
                         <button class="banner-btn">ORDER NOW</button>
                         <button class="banner-btn">SHOP LIST</button>
@@ -54,7 +55,7 @@
     </header>
     <main class="main-content">
         <!-- popular section starts here -->
-         <div class="popular-main">
+        <div class="popular-main">
             <div class="card">
                 <div>
                     <img src="./resources/images/latest-camera.jpg" alt="">
@@ -73,7 +74,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
@@ -102,7 +103,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
@@ -131,7 +132,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
@@ -160,7 +161,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
@@ -189,7 +190,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
@@ -218,21 +219,42 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i>
                     </span>
-                     4.99
+                    4.99
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
-
                 </p>
             </div>
 
-         </div>
+        </div>
     </main>
-    <footer>
+    <footer class="main-content">
+        <div class="footer-main">
+            <div class="footer-child-1">
+                <img src="./resources/nature-images/img-2.jpg" alt="">
+                <span class="icon"><i class="fa-solid fa-plus"></i></span>
+            </div>
+            <div class="footer-child-2">
+                <img src="./resources/nature-images/img-2.jpg" alt="">
+                <span class="icon"><i class="fa-solid fa-plus"></i></span>
 
+            </div>
+
+            <div class="footer-child-3">
+                <img src="./resources/nature-images/img-2.jpg" alt="">
+                <span class="icon"><i class="fa-solid fa-plus"></i></span>
+
+            </div>
+
+            <div class="footer-child-4">
+                <img src="./resources/nature-images/img-2.jpg" alt="">
+                <span class="icon"><i class="fa-solid fa-plus"></i></span>
+
+            </div>
+        </div>
     </footer>
 </body>
 
