--- a/index.html
+++ b/index.html
@@ -228,8 +228,49 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing.<br>
                 </p>
             </div>
-
         </div>
+
+        <!-- qna section -->
+        <div class="qna-main">
+            <div class="qna-child">
+                <img src="./resources/qna.jpg" alt="">
+            </div>
+            <div class="qna-child">
+                <div class="form-container">
+                    <div class="form-field">
+                        <p>Your Name: </p>
+                        <input type="text" name="" id="">
+                    </div>
+
+                    <div class="form-field">
+                        <p>Your Name: </p>
+                        <input type="text" name="" id="">
+                    </div>
+
+                    <div class="form-field">
+                        <p>Your Name: </p>
+                        <input type="text" name="" id="">
+                    </div>
+
+                    <div class="form-field">
+                        <p>Your Name: </p>
+                        <select name="" id="">
+                            <option value="">developer</option>
+                            <option value="">developer</option>
+                            <option value="">developer</option>
+                            <option value="">developer</option>
+                        </select>
+                    </div>
+                    <div class="form-field-textarea">
+                        <p>Your Name: </p>
+                        <textarea name="" id=""></textarea>
+                    </div>
+                </div>
+
+                <button class="qna-submit-button">Submit Here</button>
+            </div>
+        </div>
+
     </main>
     <footer class="main-content">
         <div class="footer-main">
